[project]
name = "analyzemyclaim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "pydantic-ai-slim[anthropic]>=2.13.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Live-LLM tests are opt-in: `pytest -m llm` (the CLI -m overrides this one).
addopts = "-m 'not llm'"
markers = [
    "llm: calls the real model; needs a real ANTHROPIC_API_KEY",
]
